--- a/index.html
+++ b/index.html
@@ -7,36 +7,35 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
+  <link rel="stylesheet" href="./css/style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Learn to code by watching others
+  <main id="app">
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+    <header>
+      <h1>Learn to code by watching others</h1>
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. </p>
+    </header>
 
-  Try it free 7 days then $20/mo. thereafter
+    <section class="container">
+      <div class="button try-it-button">
+        <strong>Try it free 7 days</strong> then $20/mo. thereafter
+      </div>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+      <form class="claim-free-form">
+        <input type="text" placeholder="First Name " required>
+        <input type="text" placeholder="Last Name" required>
+        <input type="email" placeholder="Email Address" required>
+        <input type="password" placeholder="Password" required>
 
-  Claim your free trial 
+        <button type="submit" class="button claim-free">Claim your free trial </button>
+        <label for="terms">By clicking the button, you are agreeing to our <a href="#"> Terms and Services</a> </label>
+      </form>
+    </section>
+  </main>  
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
